Refactor#176 (#177)
* [refactor] 주석처리된 코드 삭제

* [refactor] 테스트용 서비스 로직삭제

* [refactor] log 수정 Sout -> log.debug

* [refactor] syncronized 삭제를 위해 ChatRoom엔티티에 Unique 제약조건 설정

* [refactor] Dto 중복 필드 수정

* [refactor] Collectors 대신에 Stream.toList()로 교체

* [refactor] findExistingChatRoom에 @Transacitonal추가

* [refactor] findExistingChatRoom 에서 중복 검색 로직 삭제

* [refactor] getChatRoomMessages 메소드에서 유효성 검사 이중으로 하는 부분 삭제

* [refactor] getChatRoomMessages 메소드에서 유효성 검사 이중으로 하는 부분 삭제

* [refactor] getParticipants 삭제 - 사용 안함

* [refactor] MessageDto에서 Sender잔여 삭제